@@ -3,7 +3,7 @@
  *
  * Copyright (C) 1999-2003 Lars Knoll (knoll@kde.org)
  *           (C) 2003-2004 Apple Computer, Inc.
- *           (C) 2004-2005 Allan Sandfeld Jensen (kde@carewolf.com)
+ *           (C) 2004-2006 Allan Sandfeld Jensen (kde@carewolf.com)
  *           (C) 2004 Germain Garand (germain@ebooksfrance.org)
  *
  * This library is free software; you can redistribute it and/or
@@ -773,8 +773,6 @@ unsigned int CSSStyleSelector::addInlineDeclarations(DOM::ElementImpl* e,
     return numProps;
 }
 
-static bool subject;
-
 // modified version of the one in kurl.cpp
 static void cleanpath(QString &path)
 {
@@ -843,7 +841,7 @@ static void checkPseudoState( const CSSStyleSelector::Encodedurl& encodedurl, DO
 }
 
 // a helper function for parsing nth-arguments
-static inline bool matchNth(int count, const QString& nth)
+static bool matchNth(int count, const QString& nth)
 {
     if (nth.isEmpty()) return false;
     int a = 0;
@@ -898,17 +896,105 @@ static inline bool matchNth(int count, const QString& nth)
     return false;
 }
 
-void CSSStyleSelector::checkSelector(int selIndex, DOM::ElementImpl *e)
+// Recursive check of combinators to support nondeterministic matching
+DOM::NodeImpl* CSSStyleSelector::checkSubSelectors(DOM::CSSSelector *sel, DOM::ElementImpl * e, DOM::NodeImpl * n, bool &onlyHoverActive, bool isAncestor)
+{
+    if(!n->isElementNode()) return 0;
+
+    CSSSelector::Relation relation = sel->relation;
+    sel = sel->tagHistory;
+    if (!sel) return n;
+
+    switch(relation)
+    {
+    case CSSSelector::Descendant:
+    {
+        ElementImpl *elem = 0;
+        while(true)
+        {
+            n = n->parentNode();
+            if(!n || !n->isElementNode()) return 0;
+            elem = static_cast<ElementImpl *>(n);
+            // Found one matching element
+            if(checkOneSelector(sel, elem, e, true)) {
+                // Check the rest of the combinators
+                bool t_onlyHoverActive = onlyHoverActive;
+                if (checkSubSelectors(sel, e, n, t_onlyHoverActive, true)) {
+                    onlyHoverActive = t_onlyHoverActive;
+                    return n;
+                }
+            }
+        }
+        return 0;
+    }
+    case CSSSelector::Child:
+    {
+        n = n->parentNode();
+        if (!strictParsing)
+            while (n && n->implicitNode()) n = n->parentNode();
+        if(!n || !n->isElementNode()) return 0;
+        ElementImpl *elem = static_cast<ElementImpl *>(n);
+        if(!checkOneSelector(sel, elem, e, true)) return 0;
+        break;
+    }
+    case CSSSelector::IndirectAdjacent:
+    {
+        ElementImpl *elem = 0;
+        while(true)
+        {
+            n = n->previousSibling();
+            while( n && !n->isElementNode() )
+                n = n->previousSibling();
+            if( !n ) return 0;
+            elem = static_cast<ElementImpl *>(n);
+            if (checkOneSelector(sel, elem, e, false)) {
+                // Check the rest of the combinators
+                bool t_onlyHoverActive = onlyHoverActive;
+                if (checkSubSelectors(sel, e, n, t_onlyHoverActive, false)) {
+                    onlyHoverActive = t_onlyHoverActive;
+                    return n;
+                }
+            }
+        };
+        return 0;
+    }
+    case CSSSelector::DirectAdjacent:
+    {
+        n = n->previousSibling();
+        while( n && !n->isElementNode() )
+            n = n->previousSibling();
+        if( !n ) return 0;
+        ElementImpl *elem = static_cast<ElementImpl *>(n);
+        if(!checkOneSelector(sel, elem, e, false)) return 0;
+        break;
+    }
+    case CSSSelector::SubSelector:
+    {
+        if (onlyHoverActive)
+            onlyHoverActive = (sel->match == CSSSelector::PseudoClass &&
+                            (sel->pseudoType() == CSSSelector::PseudoHover ||
+                                sel->pseudoType() == CSSSelector::PseudoActive));
+
+        //kdDebug() << "CSSOrderedRule::checkSelector" << endl;
+        ElementImpl *elem = static_cast<ElementImpl *>(n);
+        // a selector is invalid if something follows :first-xxx
+        if ( dynamicPseudo != RenderStyle::NOPSEUDO ) {
+            return 0;
+        }
+        if(!checkOneSelector(sel, elem, e, isAncestor)) return 0;
+        //kdDebug() << "CSSOrderedRule::checkSelector: passed" << endl;
+        break;
+    }
+    }
+    return checkSubSelectors(sel, e, n, onlyHoverActive, isAncestor);
+}
+
+void CSSStyleSelector::checkSelector(int selIndex, DOM::ElementImpl * e)
 {
     dynamicPseudo = RenderStyle::NOPSEUDO;
 
-    NodeImpl *n = e;
-
     selectorCache[ selIndex ].state = Invalid;
     CSSSelector *sel = selectors[ selIndex ];
-
-    // we have the subject part of the selector
-    subject = true;
 
     // We track whether or not the rule contains only :hover and :active in a simple selector. If
     // so, we can't allow that to apply to every element on the page.  We assume the author intended
@@ -921,86 +1007,15 @@ void CSSStyleSelector::checkSelector(int selIndex, DOM::ElementImpl *e)
     bool affectedByActive = style->affectedByActiveRules();
 
     // first selector has to match
-    if(!checkOneSelector(sel, e)) return;
+    if(!checkOneSelector(sel, e, e, true)) return;
 
     // check the subselectors
-    CSSSelector::Relation relation = sel->relation;
-    while((sel = sel->tagHistory))
-    {
-        if(!n->isElementNode()) return;
-        switch(relation)
-        {
-        case CSSSelector::Descendant:
-        {
-            bool found = false;
-            while(!found)
-            {
-		subject = false;
-                n = n->parentNode();
-                if(!n || !n->isElementNode()) return;
-                ElementImpl *elem = static_cast<ElementImpl *>(n);
-                if(checkOneSelector(sel, elem)) found = true;
-            }
-            break;
-        }
-        case CSSSelector::Child:
-        {
-	    subject = false;
-            n = n->parentNode();
-            if (!strictParsing)
-                while (n && n->implicitNode()) n = n->parentNode();
-            if(!n || !n->isElementNode()) return;
-            ElementImpl *elem = static_cast<ElementImpl *>(n);
-            if(!checkOneSelector(sel, elem)) return;
-            break;
-        }
-        case CSSSelector::DirectAdjacent:
-        {
-            subject = false;
-            n = n->previousSibling();
-            while( n && !n->isElementNode() )
-                n = n->previousSibling();
-            if( !n ) return;
-            ElementImpl *elem = static_cast<ElementImpl *>(n);
-            if(!checkOneSelector(sel, elem)) return;
-            break;
-        }
-        case CSSSelector::IndirectAdjacent:
-        {
-            subject = false;
-            ElementImpl *elem = 0;
-            do {
-                n = n->previousSibling();
-                while( n && !n->isElementNode() )
-                    n = n->previousSibling();
-                if( !n ) return;
-                elem = static_cast<ElementImpl *>(n);
-            } while (!checkOneSelector(sel, elem));
-            break;
-        }
-        case CSSSelector::SubSelector:
-	{
-            if (onlyHoverActive)
-                onlyHoverActive = (sel->match == CSSSelector::PseudoClass &&
-                                   (sel->pseudoType() == CSSSelector::PseudoHover ||
-                                    sel->pseudoType() == CSSSelector::PseudoActive));
+    NodeImpl *n = checkSubSelectors(sel, e, e, onlyHoverActive, true);
+    if (!n) return;
 
-	    //kdDebug() << "CSSOrderedRule::checkSelector" << endl;
-	    ElementImpl *elem = static_cast<ElementImpl *>(n);
-	    // a selector is invalid if something follows :first-xxx
-	    if ( dynamicPseudo != RenderStyle::NOPSEUDO ) {
-		return;
-	    }
-	    if(!checkOneSelector(sel, elem, true)) return;
-	    //kdDebug() << "CSSOrderedRule::checkSelector: passed" << endl;
-	    break;
-	}
-        }
-        relation = sel->relation;
-    }
-
+    bool isSubject = (n == e);
     // disallow *:hover, *:active, and *:hover:active except for links
-    if (onlyHoverActive && subject) {
+    if (onlyHoverActive && isSubject) {
         if (pseudoState == PseudoUnknown)
             checkPseudoState( encodedurl, e );
 
@@ -1023,7 +1038,7 @@ void CSSStyleSelector::checkSelector(int selIndex, DOM::ElementImpl *e)
     return;
 }
 
-bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl *e, bool isSubSelector)
+bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl *e, DOM::ElementImpl *subject, bool isAncestor )
 {
     if(!e)
         return false;
@@ -1044,6 +1059,8 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
             return false;
     }
 
+    DOM::DocumentImpl* doc = e->getDocument();
+
     if(sel->attr)
     {
         DOMString value = e->getAttribute(sel->attr);
@@ -1052,9 +1069,9 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
         switch(sel->match)
         {
         case CSSSelector::Exact:
-            /* attribut values are case insensitive in all HTML modes,
+            /* attribute values are case insensitive in all HTML modes,
                even in the strict ones */
-            if ( e->getDocument()->htmlMode() != DocumentImpl::XHtml ) {
+            if ( doc->htmlMode() != DocumentImpl::XHtml ) {
                 if ( strcasecmp(sel->value, value) )
                     return false;
             } else {
@@ -1178,6 +1195,17 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
             }
             if (!e->firstChild())
                 return true;
+            else {
+                // check for empty text nodes
+                NodeImpl *t = e->firstChild();
+
+                while (t && t->isTextNode() && static_cast<TextImpl*>(t)->length() == 0) t = t->nextSibling();
+
+                if (t == 0)
+                    return true;
+                else
+                    return false;
+            }
             break;
 	case CSSSelector::PseudoFirstChild: {
 	    // first-child matches the first child that is an element!
@@ -1193,6 +1221,7 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
         case CSSSelector::PseudoLastChild: {
             // last-child matches the last child that is an element!
             if (e->parentNode() && e->parentNode()->isElementNode()) {
+                // Handle unfinished parsing
                 if (!e->parentNode()->closed()) {
                     e->setRestyleLate();
                     static_cast<ElementImpl*>(e->parentNode())->setRestyleChildrenLate();
@@ -1236,7 +1265,7 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
                     if (n->isElementNode()) count++;
                     n = n->previousSibling();
                 }
-                kdDebug(6080) << "NthChild " << count << "=" << sel->string_arg << endl;
+//                 kdDebug(6080) << "NthChild " << count << "=" << sel->string_arg << endl;
                 if (matchNth(count,sel->string_arg.string()))
                     return true;
             }
@@ -1355,7 +1384,7 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
             break;
         }
         case CSSSelector::PseudoTarget:
-            if (e == e->getDocument()->getCSSTarget())
+            if (e == doc->getCSSTarget())
                 return true;
             break;
 	case CSSSelector::PseudoLink:
@@ -1373,7 +1402,7 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
         case CSSSelector::PseudoHover: {
 	    // If we're in quirks mode, then hover should never match anchors with no
 	    // href and *:hover should not match anything. This is important for sites like wsj.com.
-	    if (strictParsing || isSubSelector || sel->relation == CSSSelector::SubSelector || (sel->tag != anyQName && e->id() != ID_A) || e->hasAnchor()) {
+	    if (strictParsing || sel->relation == CSSSelector::SubSelector || (sel->tag != anyQName && e->id() != ID_A) || e->hasAnchor()) {
 		if (element == e)
 		    style->setAffectedByHoverRules(true);
 		if (e->renderer()) {
@@ -1393,7 +1422,7 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
 	case CSSSelector::PseudoActive:
 	    // If we're in quirks mode, then :active should never match anchors with no
 	    // href.
-	    if (strictParsing || isSubSelector || sel->relation == CSSSelector::SubSelector || (sel->tag != anyQName && e->id() != ID_A) || e->hasAnchor()) {
+	    if (strictParsing || sel->relation == CSSSelector::SubSelector || (sel->tag != anyQName && e->id() != ID_A) || e->hasAnchor()) {
 		if (element == e)
 		    style->setAffectedByActiveRules(true);
 		else if (e->renderer())
@@ -1403,16 +1432,16 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
 	    }
 	    break;
         case CSSSelector::PseudoRoot:
-            if (e == e->getDocument()->documentElement())
+            if (e == doc->documentElement())
                 return true;
             break;
         case CSSSelector::PseudoLang: {
+            // ### check xml:lang attribute in XML and XHTML documents
             DOMString value = e->getAttribute(ATTR_LANG);
             // The LANG attribute is inherited like a property
             NodeImpl *n = e->parent();;
             while (n && value.isEmpty()) {
                 if (n->isElementNode()) {
-                    // ### check xml:lang attribute in XML and XHTML documents
                     value = static_cast<ElementImpl*>(n)->getAttribute(ATTR_LANG);
                 } else
                 if (n->isDocumentNode()) {
@@ -1442,7 +1471,7 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
                 // but it is, so let's honor it.
                 if (subSel->simpleSelector)
                     break;
-                if (!checkOneSelector(subSel, e))
+                if (!checkOneSelector(subSel, e, subject, isAncestor))
                     return true;
             }
             break;
@@ -1467,7 +1496,7 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
             if (e->isHTMLElement()) {
                 if (!e->closed()) {
                     e->setRestyleSelfLate();
-                    return false;
+                   return false;
                 }
                 HTMLElementImpl *elem;
                 elem = static_cast<HTMLElementImpl*>(e);
@@ -1486,13 +1515,13 @@ bool CSSStyleSelector::checkOneSelector(DOM::CSSSelector *sel, DOM::ElementImpl 
 
 	// Pseudo-elements:
 	case CSSSelector::PseudoFirstLine:
-	    if ( subject ) {
+	    if ( e == subject ) {
 		dynamicPseudo=RenderStyle::FIRST_LINE;
 		return true;
 	    }
 	    break;
 	case CSSSelector::PseudoFirstLetter:
-	    if ( subject ) {
+	    if ( e == subject ) {
 		dynamicPseudo=RenderStyle::FIRST_LETTER;
 		return true;
 	    }
